gcc/testsuite/rust/rustc/ui/parser/trait-bounds-not-on-impl.rs
trait Foo {}

struct Bar;

impl Foo + Owned for Bar {} // { dg-error "" "" { target *-*-* } }

fn main() { }

